--- a/db/readme
+++ b/db/readme
@@ -1,2 +1,2 @@
-The mongo db package is download with command: apt-get download mongodb-org-shell=3.0.7 mongodb-org-tools=3.0.7
-And extract the deb with command like: dpkg -x mongodb-org-shell_3.0.7_amd64.deb
+The mongo db package is download with command: apt-get download mongodb-org-shell=3.4.2 mongodb-org-tools=3.4.2
+And extract the deb with command like: dpkg -x mongodb-org-shell_3.4.2_amd64.deb .
